--- a/Lubli Ghibli/View/Base.lproj/Main.storyboard
+++ b/Lubli Ghibli/View/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="background" destination="h6C-ho-5GM" id="ga8-Qf-Rla"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
