--- a/Lubli Ghibli/View/Base.lproj/Main.storyboard
+++ b/Lubli Ghibli/View/Base.lproj/Main.storyboard
@@ -27,18 +27,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R76-qL-U3r">
-                                <rect key="frame" x="0.0" y="131" width="414" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vpc-CS-tkJ">
+                                <rect key="frame" x="94" y="123" width="226" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="searchFieldPressed:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="BHg-i1-InF"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
                         <outlet property="background" destination="h6C-ho-5GM" id="ga8-Qf-Rla"/>
-                        <outlet property="categoryPicker" destination="R76-qL-U3r" id="K85-lD-Sqi"/>
                         <outlet property="mainHeading" destination="m36-ze-08p" id="LyK-x6-XQd"/>
+                        <outlet property="searchField" destination="vpc-CS-tkJ" id="Sk3-Pf-k6b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
